Refactor entities/context classes